@@ -1,1 +1,1 @@
-<?xml version="1.0" encoding="UTF-8" standalone="yes"?><DeviceProperties xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="DeviceProperties_V36.xsd">	<Device>		<name>CellLog 8S</name>		<manufacturer>Junsi</manufacturer>		<manufacturerURL>https://www.jun-si.com</manufacturerURL>		<group>charger</group>		<image>CellLog 8S.png</image>		<usage>false</usage>	</Device>	<SerialPort>		<port>-</port>		<baudeRate>128000</baudeRate>		<dataBits>DATABITS_8</dataBits>		<stopBits>STOPBITS_1</stopBits>		<parity>PARITY_NONE</parity>		<flowControlMode>FLOWCONTROL_NONE</flowControlMode>		<isRTS>false</isRTS>		<isDTR>false</isDTR>        <TimeOut>            <ReadTimeOut>2500</ReadTimeOut>            <ReadStableIndex>8</ReadStableIndex>            <WriteCharDelayTime>0</WriteCharDelayTime>            <WriteDelayTime>0</WriteDelayTime>        </TimeOut>	</SerialPort>	<TimeBase>		<name>time</name>		<symbol>t</symbol>		<unit>msec</unit>        <timeStep>1000.0</timeStep>	</TimeBase>    <DataBlock>        <format inputType="SERIAL_IO" formatType="BYTE" size="-70"/>        <format inputType="FILE_IO" formatType="VALUE" size="9"/>        <timeUnit>sec</timeUnit>        <separator>semicolon</separator>    </DataBlock>    <State>        <property description="Monitoring" type="Integer" value="1" name="state_monitoring"/>    </State>    <Channels>		<Channel type="TYPE_OUTLET" name="type_outlet">            <Measurement>                <name>voltage</name>                <symbol>U</symbol>                <unit>V</unit>                <active>true</active>                <statistics sigma="false" avg="false" max="true" min="true"/>            </Measurement>            <Measurement>                <name>balance</name>                <symbol>Bal</symbol>                <unit>mV</unit>                <statistics sigma="true" avg="true" max="true" min="true"/>                <property description="factor to measurement value" type="Double" value="1000.0" name="factor"/>            </Measurement>            <Measurement>                <name>cell_voltage 1</name>                <symbol>U</symbol>                <unit>V</unit>                <active>true</active>                <statistics sigma="false" avg="false" max="true" min="true"/>            </Measurement>            <Measurement>                <name>cell_voltage 2</name>                <symbol>U</symbol>                <unit>V</unit>                <active>true</active>                <statistics sigma="false" avg="false" max="true" min="true"/>                <property type="Integer" value="2" name="scale_sync_ref_ordinal"/>            </Measurement>            <Measurement>                <name>cell_voltage 3</name>                <symbol>U</symbol>                <unit>V</unit>                <active>true</active>                <statistics sigma="false" avg="false" max="true" min="true"/>                <property type="Integer" value="2" name="scale_sync_ref_ordinal"/>            </Measurement>            <Measurement>                <name>cell_voltage 4</name>                <symbol>U</symbol>                <unit>V</unit>                <active>true</active>                <statistics sigma="false" avg="false" max="true" min="true"/>                <property type="Integer" value="2" name="scale_sync_ref_ordinal"/>            </Measurement>            <Measurement>                <name>cell_voltage 5</name>                <symbol>U</symbol>                <unit>V</unit>                <active>true</active>                <statistics sigma="false" avg="false" max="true" min="true"/>                <property type="Integer" value="2" name="scale_sync_ref_ordinal"/>            </Measurement>            <Measurement>                <name>cell_voltage 6</name>                <symbol>U</symbol>                <unit>V</unit>                <active>true</active>                <statistics sigma="false" avg="false" max="true" min="true"/>                <property type="Integer" value="2" name="scale_sync_ref_ordinal"/>            </Measurement>            <Measurement>                <name>cell_voltage 7</name>                <symbol>U</symbol>                <unit>V</unit>                <active>true</active>                <statistics sigma="false" avg="false" max="true" min="true"/>                <property type="Integer" value="2" name="scale_sync_ref_ordinal"/>            </Measurement>            <Measurement>                <name>cell_voltage 8</name>                <symbol>U</symbol>                <unit>V</unit>                <active>true</active>                <statistics sigma="false" avg="false" max="true" min="true"/>                <property type="Integer" value="2" name="scale_sync_ref_ordinal"/>            </Measurement>        </Channel>    </Channels>    <Desktop>        <property value="true" name="table_tab"/>        <property value="true" name="digital_tab"/>        <property value="false" name="analog_tab"/>        <property target_reference_ordinal="9" value="true" name="voltage_per_cell_tab"/>        <property description="UTILITY_GRAPHICS_TAB" value="false" name="utility_garphics_tab"/>        <property description="UTILITY_DEVICE_TAB" value="false" name="utility_device_tab"/>	</Desktop></DeviceProperties>
+<?xml version="1.0" encoding="UTF-8" standalone="yes"?><DeviceProperties xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="DeviceProperties_V36.xsd">	<Device>		<name>CellLog 8S</name>		<manufacturer>Junsi</manufacturer>		<manufacturerURL>https://www.jun-si.com</manufacturerURL>		<group>charger</group>		<image>CellLog 8S.png</image>		<usage>false</usage>	</Device>	<SerialPort>		<port>-</port>		<baudeRate>128000</baudeRate>		<dataBits>DATABITS_8</dataBits>		<stopBits>STOPBITS_1</stopBits>		<parity>PARITY_NONE</parity>		<flowControlMode>FLOWCONTROL_NONE</flowControlMode>		<isRTS>false</isRTS>		<isDTR>false</isDTR>        <TimeOut>            <ReadTimeOut>2500</ReadTimeOut>            <ReadStableIndex>8</ReadStableIndex>            <WriteCharDelayTime>0</WriteCharDelayTime>            <WriteDelayTime>0</WriteDelayTime>        </TimeOut>	</SerialPort>	<TimeBase>		<name>time</name>		<symbol>t</symbol>		<unit>msec</unit>        <timeStep>1000.0</timeStep>	</TimeBase>    <DataBlock>        <format inputType="SERIAL_IO" formatType="BYTE" size="-70"/>        <format inputType="FILE_IO" formatType="VALUE" size="9"/>        <timeUnit>sec</timeUnit>        <separator>semicolon</separator>    </DataBlock>    <State>        <property description="Monitoring" type="Integer" value="1" name="state_monitoring"/>    </State>    <Channels>		<Channel type="TYPE_OUTLET" name="type_outlet">            <Measurement>                <name>voltage</name>                <symbol>U</symbol>                <unit>V</unit>                <active>true</active>                <statistics sigma="false" avg="false" max="true" min="true"/>            </Measurement>            <Measurement>                <name>balance</name>                <symbol>Bal</symbol>                <unit>mV</unit>                <statistics sigma="true" avg="true" max="true" min="true"/>                <property description="factor to measurement value" type="Double" value="1000.0" name="factor"/>            </Measurement>            <Measurement>                <name>cell_voltage 1</name>                <symbol>U</symbol>                <unit>V</unit>                <active>true</active>                <statistics sigma="false" avg="false" max="true" min="true"/>            </Measurement>            <Measurement>                <name>cell_voltage 2</name>                <symbol>U</symbol>                <unit>V</unit>                <active>true</active>                <statistics sigma="false" avg="false" max="true" min="true"/>                <property type="Integer" value="2" name="scale_sync_ref_ordinal"/>            </Measurement>            <Measurement>                <name>cell_voltage 3</name>                <symbol>U</symbol>                <unit>V</unit>                <active>true</active>                <statistics sigma="false" avg="false" max="true" min="true"/>                <property type="Integer" value="2" name="scale_sync_ref_ordinal"/>            </Measurement>            <Measurement>                <name>cell_voltage 4</name>                <symbol>U</symbol>                <unit>V</unit>                <active>true</active>                <statistics sigma="false" avg="false" max="true" min="true"/>                <property type="Integer" value="2" name="scale_sync_ref_ordinal"/>            </Measurement>            <Measurement>                <name>cell_voltage 5</name>                <symbol>U</symbol>                <unit>V</unit>                <active>true</active>                <statistics sigma="false" avg="false" max="true" min="true"/>                <property type="Integer" value="2" name="scale_sync_ref_ordinal"/>            </Measurement>            <Measurement>                <name>cell_voltage 6</name>                <symbol>U</symbol>                <unit>V</unit>                <active>true</active>                <statistics sigma="false" avg="false" max="true" min="true"/>                <property type="Integer" value="2" name="scale_sync_ref_ordinal"/>            </Measurement>            <Measurement>                <name>cell_voltage 7</name>                <symbol>U</symbol>                <unit>V</unit>                <active>true</active>                <statistics sigma="false" avg="false" max="true" min="true"/>                <property type="Integer" value="2" name="scale_sync_ref_ordinal"/>            </Measurement>            <Measurement>                <name>cell_voltage 8</name>                <symbol>U</symbol>                <unit>V</unit>                <active>true</active>                <statistics sigma="false" avg="false" max="true" min="true"/>                <property type="Integer" value="2" name="scale_sync_ref_ordinal"/>            </Measurement>        </Channel>    </Channels>    <Desktop>        <property value="true" name="table_tab"/>        <property value="true" name="digital_tab"/>        <property value="false" name="analog_tab"/>        <property target_reference_ordinal="2" value="true" name="voltage_per_cell_tab"/>        <property description="UTILITY_GRAPHICS_TAB" value="false" name="utility_garphics_tab"/>        <property description="UTILITY_DEVICE_TAB" value="false" name="utility_device_tab"/>	</Desktop></DeviceProperties>
