@@ -2,10 +2,11 @@ Development history / change log, please read from bottom up
 
 Version 3.3.8 - xx yyy 2019
 Generic changes/fixes
-	*
+	* catch possible IndexOutOfBoundsException while updating cell voltage window
 	
 Device specific changes/fixes
 	* HoTTAdapter2 - fix power calculation while importing *.log EAM
+	* CellLog8S - fix cell voltage display, correct index
 	
 	
 Version 3.3.7 - 14 Apr 2019
